--- a/style.css
+++ b/style.css
@@ -41,6 +41,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);
+
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
@@ -48,7 +51,7 @@ section#login > div#imagem {
     background: #5f2c82 url(imagens/imagem-fundo.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: right center;
+    background-position: left bottom;
     height: 200px;
 }
 
