--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@
     box-sizing: border-box;
 }
 
-body, html {
+body,
+html {
     background-color: #5f2c82;
     height: 100vh;
     width: 100vw;
@@ -40,7 +41,7 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);
 
-    transition: width .3s, height .3s;
+    transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
 
@@ -55,4 +56,13 @@ section#login > div#imagem {
 section#login > div#formulario {
     display: block;
     padding: 10px;
+}
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p {
+    font-size: 0.8em;
 }
